<resources>
    <string name="app_name">SalesUMK</string>
    <string name="action_settings">Cerrar Sessión</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_login">SalesUMK</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Agente</string>
    <string name="prompt_password">Contaseña</string>
    <string name="action_sign_in">ENTRAR</string>
    <string name="action_sign_in_short">SalesUMK</string>
    <string name="error_invalid_email">Cambo Invalido</string>
    <string name="error_invalid_password">Contraseña muy Corta</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Label_text_search">Buscar</string>
    <string name="lbl_footer_lstudpt">Ultima Actualización: </string>
    <string name="title_activity_pedido">PedidoActivity</string>
    <string name="title_activity_crear_sale">CrearSaleActivity</string>
    <string name="title_activity_frm_cobro_">FrmCobro_Activity</string>
    <string name="title_activity_observacion">ObservacionActivity</string>

    <string-array name="Tipificaciones">
        <item>Tipificacion 1</item>
        <item>Tipificacion 2</item>
        <item>Tipificacion 3</item>
        <item>Tipificacion 4</item>
        <item>Tipificacion 5</item>
    </string-array>

    <string-array name="TM">
        <item>C$</item>
        <item>$</item>
    </string-array>

    <string-array name="UMD">
        <item>AMP</item>
        <item>BLS</item>
        <item>BTR</item>
        <item>CAP</item>
        <item>CJA</item>
        <item>FAM</item>
        <item>FCO</item>
        <item>JPR</item>
        <item>PMO</item>
        <item>UND</item>
    </string-array>
    <string-array name="obs">
        <item>Impulsa productos Unimark</item>
        <item>Impulsa mayores cantidades de pedido</item>
        <item>Ofrece productos Ramos u otros</item>
        <item>Ofrece la promocion del mes</item>
        <item>Revisa el cuaderno de faltantes</item>
        <item>Muestra el catalogo de productos</item>
        <item>Oferta productos que no ha vendido antes</item>
        <item>Establece negociaciones de mayor nivel</item>
        <item>Ofrece servicios de valor agregado</item>
        <item>Realiza gestion de cobro</item>
        <item>Llena adecuadamente el recibo</item>
        <item>Realiza deposito el mismo dia</item>
        <item>Verifica la informacion en el comprobante</item>
        <item>Aplica descuentos diferenciados</item>
        <item>Aplica Notas de Credito</item>
        <item>Verifica recepcion del pedido anterior</item>
        <item>Verifica que el pedido llego completo</item>
        <item>Verifica que se programe el pago</item>
        <item>Posiciona la ventaja competitiva</item>
        <item>Impulsa el uso de canjes</item>
        <item>Muestra catalogo de Canjes</item>
        <item>Llena formato de canjes adecuadamente</item>
        <item>Recopila los vouchers</item>
        <item>Destaca el Decimo Aniversario</item>
        <item>Explica en que consiste la campaña</item>
        <item>Impulsa que asistan al cierre de campaña</item>
        <item>Tiene completo el perfil del cliente</item>
        <item>Solicita documentos necesarios</item>
        <item>Llena formatos faltantes</item>
        <item>Retira producto vencido</item>
        <item>Retira producto devuelto por otro motivo</item>
        <item>Anda formulario CDP</item>
    </string-array>


    <string name="title_activity_agenda">AgendaActivity</string>
    <string name="app_label">Buscar</string>
    <string name="search_hint">Buscame</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_info_articulo">infoArticuloActivity</string>
    <string name="title_activity_articulodetalle">articulodetalleActivity</string>
    <string name="title_activity_detalles">DetallesActivity</string>
    <string name="title_activity_info_clientes">InfoClientesActivity</string>
    <string name="prompt_cant">Cantidad</string>
    <string name="action_Add">Agregar</string>
    <string name="title_activity_calendario">calendarioActivity</string>
    <string name="Lunes">Lunes</string>
    <string name="Martes">Martes</string>
    <string name="Miercoles">Miercoles</string>
    <string name="Jueves">Jueves</string>
    <string name="Viernes">Viernes</string>
    <string name="prompt_WeekStart">Semana Inicio</string>
    <string name="prompt_WeekEnd">Semana Fin</string>
    <string name="Pront_No">No</string>
    <string name="Pront_NameBanco">Banco</string>
    <string name="title_activity_bandeja_cobro">COBROS REALIZADOS</string>
    <string name="title_activity_bandeja_pedido">BandejaPedido</string>
    <string name="title_activity_todos_pedidos">TodosPedidosActivity</string>
    <string name="title_activity_todos_los_cobros">TodosLosCobrosActivity</string>

    <string name="toast_success">Success</string>
    <string name="toast_fail">Fail</string>
    <string name="toast_notconnect">Please connect printer</string>
    <string name="toast_usbpermit">Please permit app use usb and reclick this button</string>
    <string name="updateprogram">Update Program</string>
    <string name="utf8">UTF8</string>
    <string name="gbk">GBK</string>
    <string name="printing">Printing</string>
    <string name="printernotconnected">Printer not connected</string>

    <string name="sendtouart">Send To Uart</string>
    <string name="sendtext">Send Text</string>

    <string name="menu_setdebug">Set Debug</string>

</resources>
