<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">


        <AutoCompleteTextView
            android:id="@+id/WeekStart"
            android:layout_width="0dp"
            android:textColor="@color/UmkAzulOscuro"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_WeekStart"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />

        <AutoCompleteTextView
            android:id="@+id/WeekEnd"
            android:layout_width="0dp"
            android:textColor="@color/UmkAzulOscuro"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_WeekEnd"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/UmkAzulOscuro"
        android:layout_marginTop="80dp"

        >

        <TextView
            android:id="@+id/d1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/UmkBlanco"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/Lunes"
            android:layout_gravity="left"

            />
        <TextView
            android:id="@+id/d2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/UmkBlanco"
            android:textStyle="bold"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/Martes"
            android:layout_gravity="left"
            />
        <TextView
            android:id="@+id/d3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/UmkBlanco"
            android:textStyle="bold"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/Miercoles"
            android:layout_gravity="right"
            />
        <TextView
            android:id="@+id/d4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/UmkBlanco"
            android:textStyle="bold"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/Jueves"
            android:layout_gravity="left"
            />
        <TextView
            android:id="@+id/d5"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/UmkBlanco"
            android:textStyle="bold"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/Viernes"
            android:layout_gravity="right"
            />
    </LinearLayout>

    <View android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="?android:attr/listDivider" />
    <LinearLayout android:id="@+id/layout"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent">
            <ListView android:id="@+id/listview"
            android:layout_marginTop="100dp"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent">
        </ListView>
    </LinearLayout>

    </LinearLayout>